--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="d-flex flex-column">
                     <label for="password"  class="form-label">Password</label>
-                    <input type="text" name="password" id="password" class="form-control" minlength="8"  placeholder="Password" required>
+                    <input type="password" name="password" id="password" class="form-control" minlength="8"  placeholder="Password" required>
                 </div>
                 <div class="d-flex flex-column w-50 gap-2 p-2">
                     <button class="btn btn-success" type="submit">Login</button>
