--- a/feed/index.html
+++ b/feed/index.html
@@ -59,31 +59,20 @@
                 <li class="list-group col">
                     <div class="list-group-item rounded-3 border border-dark">
                         <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
                             <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
                         </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
                         <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
                     </div>
                 </li>
                 <li class="list-group col">
                     <div class="list-group-item rounded-3 border border-dark">
                         <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
                             <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
                         </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
-                        <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
-                    </div>
-                </li>
-                    
-                <li class="list-group col">
-                    <div class="list-group-item rounded-3 border border-dark">
-                        <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
-                            <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
-                        </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
                         <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
                     </div>
                 </li>
@@ -91,10 +80,10 @@
                 <li class="list-group col">
                     <div class="list-group-item rounded-3 border border-dark">
                         <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
                             <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
                         </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
                         <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
                     </div>
                 </li>
@@ -102,10 +91,21 @@
                 <li class="list-group col">
                     <div class="list-group-item rounded-3 border border-dark">
                         <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
                             <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
                         </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
+                        <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
+                    </div>
+                </li>
+                    
+                <li class="list-group col">
+                    <div class="list-group-item rounded-3 border border-dark">
+                        <a href="../profile/index.html" class="row text-reset text-decoration-none">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
+                        </a>
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
                         <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
                     </div>
                 </li>
