--- a/profile/index.html
+++ b/profile/index.html
@@ -22,7 +22,7 @@
             <a href="../feed/index.html" class="display-1 text-reset mb-3">Thought Alert <i class="fa-regular fa-lightbulb"></i></a>
             <div class="container w-75">
                 <a href="../profile/index.html" class="d-flex flex-column align-items-center text-decoration-none text-reset">
-                    <img class="w-75 rounded-3 border border-dark" src="../images/freestocks-ujdUqduwCls-unsplash.jpg" alt="">
+                    <img class="w-75 rounded-3 border border-dark" src="../images/freestocks-ujdUqduwCls-unsplash.webp" alt="">
                     <h1 class="text-center">Adelyn Mariah Sparrow</h1>
                 </a>
             </div>
@@ -52,31 +52,20 @@
                 <li class="list-group col">
                     <div class="list-group-item rounded-3 border border-dark">
                         <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
                             <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
                         </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
                         <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
                     </div>
                 </li>
                 <li class="list-group col">
                     <div class="list-group-item rounded-3 border border-dark">
                         <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
                             <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
                         </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
-                        <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
-                    </div>
-                </li>
-                    
-                <li class="list-group col">
-                    <div class="list-group-item rounded-3 border border-dark">
-                        <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
-                            <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
-                        </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
                         <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
                     </div>
                 </li>
@@ -84,10 +73,10 @@
                 <li class="list-group col">
                     <div class="list-group-item rounded-3 border border-dark">
                         <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
                             <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
                         </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
                         <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
                     </div>
                 </li>
@@ -95,10 +84,21 @@
                 <li class="list-group col">
                     <div class="list-group-item rounded-3 border border-dark">
                         <a href="../profile/index.html" class="row text-reset text-decoration-none">
-                            <img src="../images/freestocks-ujdUqduwCls-unsplash.jpg" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
                             <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
                         </a>
-                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.jpg" class="img-fluid rounded" alt="">
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
+                        <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
+                    </div>
+                </li>
+                    
+                <li class="list-group col">
+                    <div class="list-group-item rounded-3 border border-dark">
+                        <a href="../profile/index.html" class="row text-reset text-decoration-none">
+                            <img src="../images/freestocks-ujdUqduwCls-unsplash.webp" class="img-fluid object-fit-cover rounded-circle py-2 col-3" alt="">
+                            <h2 class="col-9 align-self-center ">Adelyn Mariah Sparrow</h2>
+                        </a>
+                        <img src="../images/luca-bravo-O453M2Liufs-unsplash.webp" class="img-fluid rounded" alt="">
                         <h2 class="col-12 px-2">Post example with image from unsplash.com #Blessed</h2>
                     </div>
                 </li>
